fixed some spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -226,7 +226,7 @@ img.mac{
 .milsection h1{
     font-weight: 500;
     font-size: 48px;
-    line-height: 120px;
+    line-height: 80px;
 	text-align: center;
 }
 .milsection p{
